After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 673451 - Initial Empathy Accounts Dialog does not allow to click "Connect"
Initial Empathy Accounts Dialog does not allow to click "Connect"
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-04-03 18:09 UTC by Bilal Shahid
Modified: 2012-04-04 13:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
add empathy_local_xmpp_assistant_widget_is_valid() (1.64 KB, patch)
2012-04-04 13:18 UTC, Guillaume Desmottes
committed Details | Review
check if salut settings are valid instead of assume they are not (2.09 KB, patch)
2012-04-04 13:18 UTC, Guillaume Desmottes
committed Details | Review

Description Bilal Shahid 2012-04-03 18:09:21 UTC
Originally reported at:
  https://bugs.launchpad.net/bugs/972382

I just started empathy for the first time and a dialog with local network chatting pops up
screenshot:-
http://imagebin.org/206562

The data is correct in my case. However, to be able to press the connect button (labeled "verbinden") in the screenshot I have to enter a key and delete it afterwards ...
Comment 1 Bilal Shahid 2012-04-03 18:09:46 UTC
sorry 
empathy 3.4.0 and ubuntu 12.04
Comment 2 Guillaume Desmottes 2012-04-04 13:06:17 UTC
Thanks for the bug report; I can reproduce this issue.
Comment 3 Guillaume Desmottes 2012-04-04 13:18:42 UTC
Created attachment 211291 [details] [review]
add empathy_local_xmpp_assistant_widget_is_valid()
Comment 4 Guillaume Desmottes 2012-04-04 13:18:45 UTC
Created attachment 211292 [details] [review]
check if salut settings are valid instead of assume they are not

If we manage to fetch all the info from EDS the account is ready to connect
and so the 'Connect' button should be sensitive right away.
Comment 5 Guillaume Desmottes 2012-04-04 13:24:02 UTC
Attachment 211291 [details] pushed as bba7304 - add empathy_local_xmpp_assistant_widget_is_valid()
Attachment 211292 [details] pushed as 7843d9f - check if salut settings are valid instead of assume they are not