add empathy_local_xmpp_assistant_widget_is_valid()

https://bugzilla.gnome.org/show_bug.cgi?id=673451